# cmake_openmp_demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
demo/: lib.cxx  lib.h
tests/: bounds.cxx  sum.cxx
